# kirby

./: .dockerignore  .env.example  .env.production  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  DEPLOY_TRAINING_DB.md  Dockerfile  QUICKSTART.md  README.md  ROADMAP.md  TESTING.md  TESTING_DEPLOYMENT_FIXES.md  TRAINING_STARS_COMPLETE.md  alembic.ini  alembic.ini.template  backfill_downtime.sh  deploy.sh  docker-compose.yml  pyproject.toml  update.sh
config/: starlistings.yaml  training_stars.yaml
deploy/: deploy.sh
docker/: Dockerfile  Dockerfile.api  Dockerfile.collectors  docker-compose.prod.yml  docker-compose.yml
docker/init-scripts/: 01-init-timescaledb.sql
docs/: BOOTSTRAP.md  DEPLOY_TRAINING_DB.md  EXPORT.md  EXPORTS_TROUBLESHOOTING.md  HYPERLIQUID_API_REFERENCE.md  NORDVPN_SETUP.md  PGADMIN.md  TRAINING_STARS.md  TRAINING_STARS_IMPLEMENTATION.md  TROUBLESHOOTING.md  WEBSOCKET_API.md  debug_digital_ocean.md
docs/examples/: websocket_client.html
exports/: .gitignore  README.md
migrations/: add_funding_oi_triggers.sql  env.py
migrations/versions/: 20251024_0017_ef041ce476ce_initial_schema_with_all_tables.py  20251024_1056_33cd00d7748f_add_backfill_tracking_table.py  20251026_0001_initial_schema.py  20251101_2005_20c3c7f31fc7_add_funding_rates_and_open_interest_.py  20251116_0150_increase_numeric_precision.py  20251117_0001_add_candle_notify_trigger.py  20251117_0002_add_funding_oi_notify_triggers.py  20251117_0003_add_auth_tables.py  20251119_0001_create_trading_pairs.py  20251119_0002_migrate_funding_oi_to_trading_pairs.py
scripts/: __init__.py  backfill.py  backfill_funding.py  backfill_training.py  bootstrap_admin.py  check_exports.py  create_api_key.py  detect_downtime.py  export_all.py  export_candles.py  export_funding.py  export_oi.py  health_check.py  migrate_training_db.py  run_backfill.py  run_tests.py  seed_database.py  setup.sh  setup_dev.bat  setup_dev.sh  setup_training_db.py  sync_config.py  sync_training_config.py  test_api.py  test_api_endpoints.py  test_backfill.py  test_backfill_multi_interval.py  test_collector_simple.py  test_collectors.py  test_deployment_readiness.py  test_full_system.py  test_multi_interval.py  test_multi_interval_collectors.py  test_websocket_client.py  verify_deployment.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  middleware.py  postgres_listener.py  postgres_listener_updated.py  websocket_manager.py
src/api/middleware/: __init__.py  auth.py
src/api/routers/: admin.py  candles.py  funding.py  health.py  starlistings.py  websocket.py
src/api/routes/: candles.py  funding.py  health.py  listings.py  market.py  open_interest.py
src/backfill/: __init__.py  base.py  hyperliquid_backfiller.py
src/collectors/: __init__.py  base.py  hyperliquid.py  hyperliquid_funding.py  hyperliquid_polling.py  hyperliquid_websocket.py  main.py  run.py
src/config/: loader.py  settings.py
src/db/: __init__.py  asyncpg_pool.py  base.py  connection.py  models.py  repositories.py  session.py  writer.py
src/models/: __init__.py  base.py  candle.py  coin.py  exchange.py  funding_rate.py  listing.py  listing_type.py  market_metadata.py  open_interest.py  trade.py
src/schemas/: __init__.py  auth.py  candle.py  candles.py  funding.py  funding_rate.py  health.py  listing.py  market_metadata.py  open_interest.py  starlistings.py  trade.py  websocket.py
src/utils/: __init__.py  auth.py  database_helpers.py  exceptions.py  export.py  helpers.py  interval_manager.py  logger.py  logging.py
tests/: conftest.py
tests/integration/: test_api_auth.py  test_api_candles.py  test_api_funding.py  test_api_health.py  test_api_root.py  test_api_starlistings.py  test_api_websocket.py  test_backfill_integration.py  test_binance_num_trades.py  test_binance_simple.py  test_database_insert.py  test_repositories.py
tests/unit/: test_helpers.py  test_normalization_only.py  test_websocket_manager.py
